fix typescript issue (missing heading)

--- a/kc-main/src/pages/index.astro
+++ b/kc-main/src/pages/index.astro
@@ -26,7 +26,7 @@ import '../styles/custom.css';
           <p>I help people grow their ideas and businesses by creating well-crafted websites that are beautiful, useable, and accessible.</p>
           <p>I'm someone who can take a project from initial concept all the way through launch. I can also collaborate seamlessly with existing teams: I know how to fit in.</p>
           <p>My design philosophy is simple: I craft high quality, user-centred experiences that gets results.</p>
-          <a href="https://www.linkedin.com/in/ken-chase/" class="btn btn--link repel"><span>Browse my LinkedIn profile</span><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M16.172 13H4v-2h12.172l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13Z"></path></svg></a>
+          <a href="https://www.linkedin.com/in/ken-chase/" class="btn btn--link repel"><span>Visit my LinkedIn profile</span><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M16.172 13H4v-2h12.172l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13Z"></path></svg></a>
         </div>
       </div>
     </div>
