--- a/kc-astro-shared-theme/src/styles/blocks/_masthead.scss
+++ b/kc-astro-shared-theme/src/styles/blocks/_masthead.scss
@@ -16,4 +16,6 @@
   font-family: var(--font-headings);
   font-size: var(--size-step-1);
   font-weight: var(--font-regular);
+  color: var(--color-neutral-000);
+  text-decoration: none;
 }
