--- a/kc-astro-shared-theme/src/styles/global/_global-styles.scss
+++ b/kc-astro-shared-theme/src/styles/global/_global-styles.scss
@@ -29,11 +29,13 @@ body {
 
 h1 {
   font-size: var(--size-step-7);
+  line-height: var(--leading-micro);
   max-width: 20ch;
 }
 
 h2 {
   font-size: var(--size-step-6);
+  line-height: var(--leading-micro);
   max-width: 35ch;
 }
 
