--- a/kc-astro-shared-theme/src/styles/utilities/_region.scss
+++ b/kc-astro-shared-theme/src/styles/utilities/_region.scss
@@ -3,6 +3,7 @@ REGION UTILITY
 Consistent block padding for page sections
 */
 .region {
+  scroll-margin-top: 0;
   padding-block: var(--region-space, var(--space-m));
   position: relative;
 }
