--- a/kc-astro-shared-theme/src/styles/blocks/_index.scss
+++ b/kc-astro-shared-theme/src/styles/blocks/_index.scss
@@ -1,5 +1,6 @@
 @forward 'button.scss';
 @forward 'footer.scss';
+@forward 'icon-link.scss';
 @forward 'masthead.scss';
 @forward 'nav-primary.scss';
 @forward 'nav-social.scss';
