--- a/kc-astro-shared-theme/src/styles/main.scss
+++ b/kc-astro-shared-theme/src/styles/main.scss
@@ -3,6 +3,14 @@
 @use 'compositions';
 @use 'utilities';
 
+.kc-region--lg {
+  --region-space: var(--space-xl);
+  border-top: var(--stroke-solid);
+}
+.kc-region--inverted-light {
+  background-color: var(--color-bg-light);
+}
+
 .region--lg {
   --region-space: var(--space-xl);
 }
@@ -16,14 +24,6 @@
   background-color: var(--color-bg-light);
 }
 
-.region-about,
-.region-web-design,
-.region-photography,
-.region-music,
-.region-contact {
-  scroll-margin-top: 0;
-}
-
 .region-web-design,
 .region-photography,
 .region-music {
@@ -31,8 +31,16 @@
   border-bottom: var(--stroke-solid);
 }
 
+.region--dotted {
+  border-bottom: var(--stroke-solid);
+}
+
 .dotted-border {
   background-color: #fff;
   padding: 4px;
   border-bottom: 2px dotted var(--color-accent);
+}
+
+.kc-portfolio-item {
+  --flow-space: var(--space-xl);
 }
