--- a/kc-main/src/pages/index.astro
+++ b/kc-main/src/pages/index.astro
@@ -53,7 +53,7 @@ import '../styles/custom.css';
         <div class="content flow prose">
           <p>I turn overheard conversations into songs—those random snippets of life that catch my ear while walking around the city, sitting in cafes, restaurants, and bars.</p>
           <p>My music ranges from experimental electronic sounds to bedroom rock, but I like to think of it all as <span class="dotted-border">apartment songs</span></p>
-          <p>I write, record, and produce from my home studio. Surrounded by the instruments I adore.</p>
+          <p>I write, record, and produce from my home studio surrounded by the instruments I adore.</p>
           <a href="https://soundcloud.com/therealkenchase/" class="btn btn--link repel"><span>Sample my music</span><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M16.172 13H4v-2h12.172l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13Z"></path></svg></a>
         </div>
       </div>
