--- a/kc-astro-shared-theme/src/components/IconLink.astro
+++ b/kc-astro-shared-theme/src/components/IconLink.astro
@@ -5,7 +5,7 @@ export interface Props {
   rel?: string;
   classList?: string;
 }
-const { href, target = '_self', rel = 'noopener noreferrer', classList: className = '', ...props } = Astro.props;
+const { href, target = '_self', rel = 'noopener noreferrer', classList, ...props } = Astro.props;
 ---
 
-<a href={href} classList=`btn btn--link repel ${className}` target={target} rel={rel} {...props}><span><slot /></span><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M16.172 13H4v-2h12.172l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13Z"></path></svg></a>
+<a href={href} class:list={['btn', 'btn--link', 'repel', classList]} target={target} rel={rel} {...props}><span><slot /></span><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M16.172 13H4v-2h12.172l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13Z"></path></svg></a>
