--- a/kc-main/src/pages/index.astro
+++ b/kc-main/src/pages/index.astro
@@ -26,7 +26,7 @@ import '../styles/custom.css';
           <p>I help people grow their ideas and businesses by creating well-crafted websites that are beautiful, useable, and accessible.</p>
           <p>I'm someone who can take a project from initial concept all the way through launch. I can also collaborate seamlessly with existing teams: I know how to fit in.</p>
           <p>My design philosophy is simple: I craft high quality, user-centred experiences that gets results.</p>
-          <IconLink href="https://web.kenchase.com/" class="btn btn--link repel" target="_blank">Visit my portfolio site</IconLink>
+          <IconLink href="https://web.kenchase.com/" target="_blank">Visit my portfolio site</IconLink>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@ import '../styles/custom.css';
           <p>I strive to create cinematic street photography that captures how I view the world. My work was initially heavily influenced by film noir, but over time it's taking on a life of its own. I've also embraced colour.</p>
           <p>Walking gives me the time to see what others sometimes miss—the atmosphere, the mood, the textures, the unfolding stories. There's a lot to see out there when you choose to look.</p>
           <p>My photos are little love letters to the cities I walk.</p>
-          <IconLink href="https://www.instagram.com/therealkenchase/" class="btn btn--link repel" target="_blank">Explore my photography</IconLink>
+          <IconLink href="https://www.instagram.com/therealkenchase/" target="_blank">Explore my photography</IconLink>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@ import '../styles/custom.css';
           <p>I turn overheard conversations into songs—those random snippets of life that catch my ear while walking around the city, sitting in cafes, restaurants, and bars.</p>
           <p>My music ranges from experimental electronic sounds to bedroom rock, but I like to think of it all as <span class="dotted-border">apartment songs</span></p>
           <p>I write, record, and produce from my home studio surrounded by the instruments I adore.</p>
-          <IconLink href="https://soundcloud.com/therealkenchase/" class="btn btn--link repel" target="_blank">Hear my music</IconLink>
+          <IconLink href="https://soundcloud.com/therealkenchase/" target="_blank">Hear my music</IconLink>
         </div>
       </div>
     </div>
