--- a/kc-main/src/layouts/Layout.astro
+++ b/kc-main/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const siteTagLine = 'Canadian web designer, photographer, and musician';
 const copyrightText = `© ${new Date().getFullYear()} Ken Chase. All rights reserved.`;
 ---
 
-<BaseLayout title={title} description={description} gtmId="GTM-WS42R2C">
+<BaseLayout title={title} description={description} gtmId="GTM-WS42R2C" typescriptId="rmb0ahl">
   <Header siteName={siteName} siteTagLine={siteTagLine} navigationItems={mainNavItems} />
 
   <main class="container">
