--- a/kc-web-design/src/layouts/Layout.astro
+++ b/kc-web-design/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const siteTagLine = 'Canadian web design and development';
 const copyrightText = `© ${new Date().getFullYear()} Ken Chase. All rights reserved.`;
 ---
 
-<BaseLayout title={title} description={description} gtmId="GTM-K7632Q6C">
+<BaseLayout title={title} description={description} gtmId="GTM-K7632Q6C" typescriptId="rmb0ahl">
   <Header siteName={siteName} siteTagLine={siteTagLine} navigationItems={mainNavItems} />
 
   <main class="container">
