--- a/kc-web-design/src/pages/contact.astro
+++ b/kc-web-design/src/pages/contact.astro
@@ -1,7 +1,6 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import { Heading, IconLink } from 'kc-astro-shared-theme';
-import '../styles/custom.css';
+import Layout from '@layouts/Layout.astro';
+import { Heading } from 'kc-astro-shared-theme';
 ---
 
 <Layout title="Contact Ken Chase - Canadian web designer and developer" description="Get in touch with Ken Chase, a Canadian web designer and developer based in Ottawa, Ontario. Reach out for web design, development, and WordPress services.">
