--- a/kc-main/src/pages/index.astro
+++ b/kc-main/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '@layouts/Layout.astro';
 import { Heading, IconLink } from 'kc-astro-shared-theme';
-import '../styles/custom.css';
 ---
 
 <Layout title="Ken Chase - Ottawa Designer, Photographer & Musician" description="Ken Chase is an Ottawa web designer, photographer, and musician offering creative services in English and French throughout Ontario and beyond.">
