--- a/kc-web-design/src/pages/portfolio.astro
+++ b/kc-web-design/src/pages/portfolio.astro
@@ -1,7 +1,6 @@
 ---
 import { Section, Heading, SummaryCard, IconLink } from 'kc-astro-shared-theme';
-import Layout from '../layouts/Layout.astro';
-import '../styles/custom.css';
+import Layout from '@layouts/Layout.astro';
 // Import client list data
 import clientList from '../data/client-list.json';
 // Importing the portfolioPosts collection from Astro's content system
