add basic Astro view transition effect

--- a/kc-astro-shared-theme/src/layouts/BaseLayout.astro
+++ b/kc-astro-shared-theme/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-
+import { ClientRouter } from "astro:transitions";
 export interface Props {
   title: string;
   description?: string;
@@ -24,6 +24,7 @@ const { title, description, classList, gtmId, typescriptId} = Astro.props;
     )}
     <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
+    <ClientRouter />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
