--- a/kc-astro-shared-theme/src/layouts/BaseLayout.astro
+++ b/kc-astro-shared-theme/src/layouts/BaseLayout.astro
@@ -28,6 +28,7 @@ const { title, description, classList, gtmId, typescriptId} = Astro.props;
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <link rel="manifest" href="/site.webmanifest" />
     {typescriptId && (
       <link rel="preload" href=`https://use.typekit.net/${typescriptId}.css` />
